fix overflow

--- a/src/Home.css
+++ b/src/Home.css
@@ -135,4 +135,7 @@
   .Home {
     overflow-x: hidden;
   }
+  .picture-div img {
+    overflow: hidden;
+}
 }
